--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,12 @@
 {
+  "headers": [
+    {
+      "source": "/(.*)\\.js", 
+      "headers": [
+        { "key": "Content-Type", "value": "application/javascript" }
+      ]
+    }
+  ],
   "rewrites": [
     {
       "source": "/(.*)",
